{
  "version": 4,
  "terraform_version": "1.13.5",
  "serial": 621,
  "lineage": "05fa835a-08c3-b532-7b0a-8ff2833b29aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000866710370:security-group/sg-05c90f0d6adc3d407",
            "description": "Security group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c90f0d6adc3d407",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "myapp-dev-alb-sg",
            "name_prefix": "",
            "owner_id": "000866710370",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-003b43ce394b06e1b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000866710370",
            "id": "sg-05c90f0d6adc3d407",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_instances_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000866710370:security-group/sg-05c731d50a572cb78",
            "description": "Security group for ECS EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c731d50a572cb78",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Inter-instance communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Traffic from ALB",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05c90f0d6adc3d407"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "myapp-dev-ecs-instances-sg",
            "name_prefix": "",
            "owner_id": "000866710370",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "timeouts": null,
            "vpc_id": "vpc-003b43ce394b06e1b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "000866710370",
            "id": "sg-05c731d50a572cb78",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000866710370:subnet/subnet-05b935c97c7b64f77",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b935c97c7b64f77",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000866710370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc-public-us-east-1a",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc-public-us-east-1a",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "vpc_id": "vpc-003b43ce394b06e1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000866710370:subnet/subnet-0f26544ce3123f2d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f26544ce3123f2d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "000866710370",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc-public-us-east-1b",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc-public-us-east-1b",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "vpc_id": "vpc-003b43ce394b06e1b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000866710370:vpc/vpc-003b43ce394b06e1b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-030492f54322b0dd2",
            "default_route_table_id": "rtb-01661a663d33a0269",
            "default_security_group_id": "sg-058a5d87018d5c967",
            "dhcp_options_id": "dopt-812837e3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-003b43ce394b06e1b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01661a663d33a0269",
            "owner_id": "000866710370",
            "region": "us-east-1",
            "tags": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc",
              "Owner": "devops-team",
              "Project": "myapp"
            },
            "tags_all": {
              "CreatedBy": "terraform",
              "Environment": "dev",
              "Name": "myapp-dev-vpc",
              "Owner": "devops-team",
              "Project": "myapp"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}